--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         @keyframes scan { 0% { transform: translateX(-100%); } 100% { transform: translateX(100%); } }
 
         /* AI Maintenance Overlay */
-        .maint-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(5, 8, 20, 0.98); z-index: 20000; display: flex; flex-direction: column; align-items: center; justify-content: center; color: #00f2ff; font-family: 'Kanit', sans-serif; backdrop-filter: blur(15px); overflow: hidden; }
-        .maint-content { text-align: center; position: relative; z-index: 2; padding: 40px; border: 1px solid rgba(0, 242, 255, 0.3); border-radius: 20px; background: rgba(0,0,0,0.6); box-shadow: 0 0 30px rgba(0, 242, 255, 0.1); max-width: 90%; width: 400px; }
+        .maint-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--bg-dark); z-index: 20000; display: flex; flex-direction: column; align-items: center; justify-content: center; color: #00f2ff; font-family: 'Kanit', sans-serif; backdrop-filter: blur(15px); overflow: hidden; }
+        .maint-content { text-align: center; position: relative; z-index: 2; padding: 40px; border: 1px solid var(--border); border-radius: 20px; background: var(--bg-panel); box-shadow: 0 0 30px rgba(0, 242, 255, 0.1); max-width: 90%; width: 400px; }
         .maint-icon { font-size: 4rem; margin-bottom: 20px; animation: pulse 2s infinite; text-shadow: 0 0 20px rgba(0, 242, 255, 0.5); }
         .maint-title { font-size: 2rem; font-weight: bold; margin-bottom: 10px; letter-spacing: 2px; text-transform: uppercase; background: linear-gradient(90deg, #fff, #00f2ff); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         .maint-desc { color: #aaa; font-size: 1rem; line-height: 1.6; }
@@ -257,7 +257,7 @@
             </div>
 
             <!-- Server Status -->
-            <div style="margin-top: 20px; padding: 15px; background: rgba(0,0,0,0.3); border-radius: 10px; border: 1px solid var(--border); margin-bottom: 80px;">
+            <div style="margin-top: 20px; padding: 15px; background: var(--bg-panel); border-radius: 10px; border: 1px solid var(--border-subtle); margin-bottom: 80px;">
                 <div style="font-size: 0.7rem; color: var(--text-muted); margin-bottom: 8px;">สถานะเซิร์ฟเวอร์</div>
                 <div style="display: flex; align-items: center; gap: 8px;">
                     <div style="width: 8px; height: 8px; background: var(--success); border-radius: 50%; box-shadow: 0 0 8px var(--success); animation: pulse 2s infinite;"></div>
